# dot-claude

./: .claude-hooks-ignore  .gitignore  .gitignore.template  .gitmodules  CLAUDE.md  README.md  RTK.md  debug_test2.swift  debug_test3.swift  final_test.swift  gen-circle  gen-circle.swift  justfile  keybindings.json  notify.sh  safe  settings.json  skip_dirs  skip_extensions  statusline.py  test.swift  test_final_swift.swift  test_lint.py  unsafe
.beads/: issues.jsonl
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.work/: config.json
agents/: architect.md  claude-md-checker.md  code-quality-validator.md  codebase-researcher.md  commit-message-writer.md  committer.md  cpp-engineer.md  devil.md  docs-architect.md  implementer.md  lua-pro.md  persistent-reviewer.md  prompt-engineer.md  quality-control-enforcer.md  researcher.md  reviewer.md  rust-engineer.md  sql-pro.md  tester.md
commands/: challenge.md  check.md  commit.md  git:commit.md  next.md  plan.md  prompt.md  ship.md  status.md  task.md
hooks/: check_ai_local.sh  common-helpers.sh  context_warning.py  enforce_search_tools.py  hooks.json  (+12 more)
tools/crates/ct/: Cargo.toml
tools/crates/ct/src/: ansi.rs  app.rs  artifact.rs  cli.rs  cochanges.rs  gitcontext.rs  main.rs  plan.rs  planfile.rs  spec.rs  specfile.rs  store.rs
tools/crates/ct/src/notify/: README.md  icon.rs  linux.rs  macos.rs  mod.rs  sound.rs
tools/crates/ct/src/ui/: confirm.rs  create.rs  detail.rs  help.rs  list.rs  mod.rs  plan_detail.rs  plans.rs  spec_detail.rs  specs.rs  status.rs  vibe.rs  vibe_detail.rs
(+312 files in other folders)
