[package]
name = "ct"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "^4", features = ["derive"] }
clap_complete = "^4"
crossterm = "^0.28"
dirs = "^6"
image = "^0.25"
fs-notify = { package = "notify", version = "^7" }
ratatui = "^0.30"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[dev-dependencies]
tempfile = "^3"
